crates/taskboard-state/tests/snapshots/snapshots__s1_published_app_state.snap
---
source: crates/taskboard-state/tests/snapshots.rs
expression: "&*app"
---
boards:
  00000000-0000-0000-0000-000000000001:
    id: 00000000-0000-0000-0000-000000000001
    remote: ~
    title: kiosk
    color: 0000ff
    archived: false
    deleted: false
    remote_seen: ~
stacks:
  00000000-0000-0000-0000-000000000001:
    id: 00000000-0000-0000-0000-000000000001
    remote: ~
    board: 00000000-0000-0000-0000-000000000001
    title: todo
    order: 1
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:01:00Z"
      order: "1970-01-01T10:01:00Z"
      deleted: "1970-01-01T10:01:00Z"
    remote_seen: ~
  00000000-0000-0000-0000-00000000000a:
    id: 00000000-0000-0000-0000-00000000000a
    remote: ~
    board: 00000000-0000-0000-0000-000000000001
    title: doing
    order: 2
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:07:00Z"
      order: "1970-01-01T10:07:00Z"
      deleted: "1970-01-01T10:07:00Z"
    remote_seen: ~
tasks:
  00000000-0000-0000-0000-000000000003:
    id: 00000000-0000-0000-0000-000000000003
    remote: ~
    title: write report
    description: draft the Q4 report
    duedate: "1970-01-02T10:00:00Z"
    done: "1970-01-01T10:04:00Z"
    stack: 00000000-0000-0000-0000-00000000000a
    order: 9
    labels:
      - 00000000-0000-0000-0000-000000000007
    archived: false
    deleted: true
    clocks:
      title: "1970-01-01T10:02:00Z"
      description: "1970-01-01T10:03:00Z"
      duedate: "1970-01-01T10:03:00Z"
      done: "1970-01-01T10:04:00Z"
      position: "1970-01-01T10:08:00Z"
      labels: "1970-01-01T10:06:00Z"
      archived: "1970-01-01T10:02:00Z"
      deleted: "1970-01-01T10:09:00Z"
    remote_seen: ~
labels:
  00000000-0000-0000-0000-000000000007:
    id: 00000000-0000-0000-0000-000000000007
    remote: ~
    board: 00000000-0000-0000-0000-000000000001
    title: urgent
    color: ff0000
    deleted: false
    clocks:
      title: "1970-01-01T10:05:00Z"
      color: "1970-01-01T10:05:00Z"
      deleted: "1970-01-01T10:05:00Z"
    remote_seen: ~
sync:
  phase: Idle
  last_success: ~
  pending_ops: 3
last_updated: "1970-01-01T10:09:00Z"
