crates/taskboard-state/tests/snapshots/snapshots__s2_published_app_state.snap
---
source: crates/taskboard-state/tests/snapshots.rs
expression: "&*app"
---
boards:
  00000000-0000-0000-0000-000000000001:
    id: 00000000-0000-0000-0000-000000000001
    remote: ~
    title: kiosk
    color: 0000ff
    archived: false
    deleted: false
    remote_seen: ~
stacks:
  00000000-0000-0000-0000-000000000001:
    id: 00000000-0000-0000-0000-000000000001
    remote: ~
    board: 00000000-0000-0000-0000-000000000001
    title: inbox
    order: 1
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:01:00Z"
      order: "1970-01-01T10:01:00Z"
      deleted: "1970-01-01T10:01:00Z"
    remote_seen: ~
tasks:
  00000000-0000-0000-0000-000000000003:
    id: 00000000-0000-0000-0000-000000000003
    remote: ~
    title: task 0 (renamed offline)
    description: ""
    duedate: ~
    done: ~
    stack: 00000000-0000-0000-0000-000000000001
    order: 0
    labels: []
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:05:00Z"
      description: "1970-01-01T10:02:00Z"
      duedate: "1970-01-01T10:02:00Z"
      done: "1970-01-01T10:02:00Z"
      position: "1970-01-01T10:02:00Z"
      labels: "1970-01-01T10:02:00Z"
      archived: "1970-01-01T10:02:00Z"
      deleted: "1970-01-01T10:02:00Z"
    remote_seen: ~
  00000000-0000-0000-0000-000000000005:
    id: 00000000-0000-0000-0000-000000000005
    remote: ~
    title: task 1
    description: ""
    duedate: ~
    done: "1970-01-01T10:06:00Z"
    stack: 00000000-0000-0000-0000-000000000001
    order: 1
    labels: []
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:03:00Z"
      description: "1970-01-01T10:03:00Z"
      duedate: "1970-01-01T10:03:00Z"
      done: "1970-01-01T10:06:00Z"
      position: "1970-01-01T10:03:00Z"
      labels: "1970-01-01T10:03:00Z"
      archived: "1970-01-01T10:03:00Z"
      deleted: "1970-01-01T10:03:00Z"
    remote_seen: ~
  00000000-0000-0000-0000-000000000007:
    id: 00000000-0000-0000-0000-000000000007
    remote: ~
    title: task 2
    description: ""
    duedate: ~
    done: ~
    stack: 00000000-0000-0000-0000-000000000001
    order: 2
    labels: []
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:04:00Z"
      description: "1970-01-01T10:04:00Z"
      duedate: "1970-01-01T10:04:00Z"
      done: "1970-01-01T10:04:00Z"
      position: "1970-01-01T10:04:00Z"
      labels: "1970-01-01T10:04:00Z"
      archived: "1970-01-01T10:04:00Z"
      deleted: "1970-01-01T10:04:00Z"
    remote_seen: ~
labels: {}
sync:
  phase: Idle
  last_success: ~
  pending_ops: 6
last_updated: "1970-01-01T10:06:00Z"
