crates/taskboard-state/tests/snapshots/snapshots__s3_persisted_state.snap
---
source: crates/taskboard-state/tests/snapshots.rs
expression: "&persisted"
---
boards:
  00000000-0000-0000-0000-000000000001:
    id: 00000000-0000-0000-0000-000000000001
    remote: 77
    title: kiosk
    color: 0000ff
    archived: false
    deleted: false
    remote_seen: "1970-01-01T10:00:00Z"
stacks:
  00000000-0000-0000-0000-000000000002:
    id: 00000000-0000-0000-0000-000000000002
    remote:
      board: 77
      stack: 1
    board: 00000000-0000-0000-0000-000000000001
    title: remote column
    order: 1
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:00:00Z"
      order: "1970-01-01T10:00:00Z"
      deleted: "1970-01-01T10:00:00Z"
    remote_seen: "1970-01-01T10:00:00Z"
tasks:
  00000000-0000-0000-0000-000000000003:
    id: 00000000-0000-0000-0000-000000000003
    remote:
      board: 77
      stack: 1
      card: 10
    title: remote card
    description: ""
    duedate: ~
    done: ~
    stack: 00000000-0000-0000-0000-000000000002
    order: 1
    labels: []
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:00:00Z"
      description: "1970-01-01T10:00:00Z"
      duedate: "1970-01-01T10:00:00Z"
      done: "1970-01-01T10:00:00Z"
      position: "1970-01-01T10:00:00Z"
      labels: "1970-01-01T10:00:00Z"
      archived: "1970-01-01T10:00:00Z"
      deleted: "1970-01-01T10:00:00Z"
    remote_seen: "1970-01-01T10:00:00Z"
labels: {}
outbox: []
validators: {}
sync:
  phase: Idle
  last_success: "1970-01-01T10:01:00Z"
  pending_ops: 0
