crates/taskboard-state/tests/snapshots/snapshots__s6_persisted_state.snap
---
source: crates/taskboard-state/tests/snapshots.rs
expression: "&persisted"
---
boards:
  00000000-0000-0000-0000-000000000001:
    id: 00000000-0000-0000-0000-000000000001
    remote: ~
    title: kiosk
    color: 0000ff
    archived: false
    deleted: false
    remote_seen: ~
stacks:
  00000000-0000-0000-0000-000000000001:
    id: 00000000-0000-0000-0000-000000000001
    remote: ~
    board: 00000000-0000-0000-0000-000000000001
    title: todo
    order: 1
    archived: false
    deleted: false
    clocks:
      title: "1970-01-01T10:01:00Z"
      order: "1970-01-01T10:01:00Z"
      deleted: "1970-01-01T10:01:00Z"
    remote_seen: ~
tasks: {}
labels: {}
outbox:
  - op_id: 00000000-0000-0000-0000-000000000002
    op:
      CreateStack: 00000000-0000-0000-0000-000000000001
    queued_at: "1970-01-01T10:01:00Z"
validators: {}
sync:
  phase:
    Failed:
      last_error: Network
  last_success: ~
  pending_ops: 1
